Prevent collapse/shift

--- a/src/app/components/stats-display/stats-display.component.scss
+++ b/src/app/components/stats-display/stats-display.component.scss
@@ -10,6 +10,7 @@
 .stats-title {
   margin: 0;
   font-size: 18px;
+  line-height: 1.4;
   color: #e5e7eb;
   text-align: center;
 }
